--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,8 @@
     <string name="diet_type">Diet Type</string>
     <string name="apply">Apply</string>
     <string name="search">Search</string>
+    <string name="_100">100</string>
+    <string name="dairy_free">Dairy Free</string>
+    <string name="cheap">Cheap</string>
+    <string name="healthy">Healthy</string>
 </resources>
