--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="cheap">Cheap</string>
     <string name="healthy">Healthy</string>
     <string name="save_to_favorite">Save to Favorite</string>
+    <string name="no_favorite_recipes">No Favorite Recipes</string>
 </resources>
